--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
     with:
       includes: "**/*.md"
       modified_files_only: false
-      
+
 
   build:
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
         run: dart --version
 
       - name: Install dependencies
-        run: dart pub get
+        run: flutter pub get
 
       # Verify the use of 'dart format' on each commit.
       - name: Verify formatting
